adding the remaining files

--- a/PatckWorks/index.html
+++ b/PatckWorks/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <hearder>
         <nav>
            <p id="Logo"><img src="C:\Users\murthy\Pictures\PatchWorks logo.jpeg"/>&nbsp;    PatchWorks</p>
-           <a href="" >Home</a>
-           <a href="">Forums</a>
-           <a href="">Tutorials</a> 
-           <button>Logout</button>      
+           <a href="home.html" target="_blank" >Home</a>
+           <a href="https://www.reddit.com/r/mobilerepair/" target="_blank">Forums</a>
+           <a href="https://www.youtube.com/results?search_query=salem+computer+shop" target="_blank">Tutorials</a> 
+           <button onclick="location.href = 'home.html';" target ="_blank">Logout</button>      
         </nav>
     </hearder>
     <main>
