changes to about page

--- a/PatckWorks/index.html
+++ b/PatckWorks/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,22 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    <hearder>
-        <nav>
-           <p id="Logo"><img src="C:\Users\murthy\Pictures\PatchWorks logo.jpeg"/>&nbsp;    PatchWorks</p>
-           <a href="home.html" target="_blank" >Home</a>
-           <a href="https://www.reddit.com/r/mobilerepair/" target="_blank">Forums</a>
-           <a href="https://www.youtube.com/results?search_query=salem+computer+shop" target="_blank">Tutorials</a> 
-           <button onclick="location.href = 'home.html';" target ="_blank">Logout</button>      
-        </nav>
-    </hearder>
+    <nav>
+        <p id="Logo"><img src="C:\Users\murthy\Pictures\PatchWorks logo.jpeg" />&nbsp; PatchWorks</p>
+        <a href="home.html" target="_blank">Home</a>
+        <a href="https://www.reddit.com/r/mobilerepair/" target="_blank">Forums</a>
+        <a href="https://www.youtube.com/results?search_query=salem+computer+shop" target="_blank">Tutorials</a>
+        <button onclick="location.href = 'home.html';" target="_blank">Logout</button>
+    </nav>
     <main>
-      
+
     </main>
     <footer>
-       <p>Credits-</p><p>Copyright&copy;-</p>
+        <p>Credits-</p>
+        <p>Copyright&copy;-</p>
     </footer>
 </body>
+
 </html>
