--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img class="BS" src="Assets\Blue Square.jpg">
+            <img class="BS" src="Blue Square.jpg">
            <a href="" class="name">Abhiram Nidumolu</div>
            <a href="">About me</a>
            <a href="">Resume</a>
@@ -27,13 +27,15 @@
         </div>
         <div class="box2">
             <div class="box3">
-                <img class="Profile_pic" src="Assets\Profile pic.jpg">
+                <img class="Profile_pic" src="Profile pic.jpg">
                 <div class="Name_1">Abhiram</div>
                 <div class="Name_1">Nidumolu</div>
+                <div class="blue_line">-</div>
+                <div class="Name_2">PROJECT MANAGER</div>
                 <div class="box4">
-                    <a class="social Gmail" href=""><img src="Assets\gmail image.png"></a>
-                    <a class="social Linkdin" href=""><img src="Assets\linkdin image.jpg"></a>
-                    <a class="social Insta" href=""><img src="Assets\insta image.jpg"></a>
+                    <a class="social Gmail" href=""><img src="gmail image.png"></a>
+                    <a class="social Linkdin" href=""><img src="linkdin image.jpg"></a>
+                    <a class="social Insta" href=""><img src="insta image.jpg"></a>
                 </div>
             </div>
         </div>
